# are-immutable-ledger

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yaml
adapters/ocsf/: README.md  ocsf_to_ledger.py
adapters/otel/: README.md  otel_to_ledger.py
api/: gateway.py  requirements.txt
contracts/: fleet-ecosystem-integration-contract.md
demo/: 01-standalone-writer.py  Makefile  docker-compose.yml  run-demo.sh
demo/joint-cpex/: README.md  docker-compose.yml  run-joint-demo.sh
demo/joint-cpex/scenarios/: 01-bob-allow-receipt.sh  02-alice-deny-receipt.sh  03-taint-chain.sh  04-redact-inputhash.sh  _lib.sh
demo/postgres-init/: 03-permissions.sql
demo/sample-data/: README.md  load-samples.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.css
frontend/src/api/: ledgerApi.ts
frontend/src/components/: ChainView.tsx  DetailSidebar.tsx  (+8 more)
proof-explorer/: proof.py
proto/: immutable_ledger.proto
scripts/: build-release.sh  deploy-smoke-k6.js  dg009-graceful-k6.js  perf-run.sh  verify-db-permissions.sh
scripts/perf/: k6-baseline.js
sdks/python/: generate_stubs.sh  ledger_client.py
src/: lib.rs  main.rs  metrics.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/db_permissions/: mod.rs
src/grpc/: mod.rs
src/repository/: mod.rs  postgres.rs
src/service/: mod.rs
tests/: EVIDENCE_MATRIX.md  SECURITY_TESTING.md  evidence-results.json  fleet_ecosystem_contract.rs  grpc_contract.rs  integration_lifecycle.rs  run_evidence.py  test_gateway_contract.py
(+10 files in other folders)
