[package]
name = "are-immutable-ledger"
version = "0.1.0"
edition = "2021"

[lib]
name = "are_immutable_ledger"
path = "src/lib.rs"

[[bin]]
name = "are-immutable-ledger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
lazy_static = "1.5.0"
postgres-types = { version = "0.2.13", features = ["with-serde_json-1"] }
prometheus = "0.14"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio-stream = "0.1.17"
tonic = "0.14.1"
tonic-prost = "0.14.1"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
zeroize = "1.8.1"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.1"

